Sun Dec  6 08:39:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/json/json.gemspec: bump version to json 1.8.3. CRuby already contained
	  upstream changes.

	  https://github.com/ruby/ruby/commit/4d059bf9f5f10f3d3088de49fc87e5555db7770d
	  https://github.com/flori/json/commit/d4c99de78905d96c3f301f48b2c789943bb3f098

	* ext/json/lib/json/version.rb: ditto.

Sat Dec  5 17:48:25 2015  Lars Kanis  <lars@greiz-reinsdorf.de>

	* tool/fake.rb: Fix cross build when srcdir is an absolute path.

	* Makefile.in: PREP dependency is needed when cross build too, not
	  "-r$(arch)-fake" to be  used before created.  [Fix GH-1125]

Sat Dec  5 17:26:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_str_new, env_path_str_new): make default string
	  UTF-8 for the case conversion is not possible.  [Bug #8822]

	* hash.c (get_env_cstr): convert non-ASCII string to UTF-8 string.

	* hash.c (ruby_setenv): use wide char version to put environment
	  variable to deal with non-ASCII value.

Sat Dec  5 09:56:50 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_CAS): old value to be swapped should be
	  same as the destination.  immediate value may need type
	  promotion.

	* ruby_atomic.h (ATOMIC_SIZE_CAS): fix the argument order of
	  InterlockedCompareExchange64.  new value and then old value is
	  the last.

Sat Dec  5 09:23:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): fix the size to be filled, not the
	  size of element, but the whole size of array.

Sat Dec  5 06:03:54 2015  Eric Wong  <e@80x24.org>

	* vm.c (ruby_vm_verbose_ptr): make static
	  (ruby_vm_debug_ptr): ditto

Sat Dec  5 00:56:29 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/ruby.h (RB_OBJ_TAINT): follow-up of r52881.
	  Turn into void expression not to use unexpected result.
	  Fix "operands have incompatible types" error with
	  Oracle Solaris Studio 12.x on Solaris.
